syntax = "proto3";

package proto;

option java_package = "com.example.demo.dto";
option java_outer_classname = "UserProto";

message UserDto {
  int64 id = 1;
  string username = 2;
  string password = 3;
  bool active = 4;
  repeated Role roles = 5;
  repeated UserNews news = 6;
  repeated UserComment comments = 7;
}

message UserSimpleDto {
  int64 id = 1;
  string username = 2;
  string password = 3;
  bool active = 4;
  repeated Role roles = 5;
}

enum Role{
    ADMIN = 0;
    JOURNALIST = 1;
    SUBSCRIBER = 2;
}

message UserNews {
  int64 id = 1;
  string date = 2;
  string title = 3;
  string text = 4;
}

message UserComment {
  int64 id = 1;
  string date = 2;
  string text = 3;
}

message UserSimpleDtoList {
  repeated UserSimpleDto userDto = 1;
}



